automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> Lemonz</title>
+  </head>
+  <h1> Lemons are the best fruit ever to be grown. You should eat more.</h1>
+  <h1>LEARN MORE HERE</h1>
+  <a>href=</a>
+</html>
